--- a/composer.json
+++ b/composer.json
@@ -1,42 +1,49 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "lahiru/exchange-rates-lk",
+    "description": "This is my package exchange-rates-lk",
     "keywords": [
-        ":vendor_name",
+        "lahiru",
         "laravel",
-        ":package_slug"
+        "exchange-rates-lk"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/lahiru/exchange-rates-lk",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "LaHiRu",
+            "email": "lahirulhr@gmail.com",
             "role": "Developer"
         }
     ],
     "require": {
         "php": "^8.0",
-        "spatie/laravel-package-tools": "^1.4.3",
-        "illuminate/contracts": "^8.37"
+        "fabpot/goutte": "^4.0",
+        "illuminate/contracts": "^8.37",
+        "spatie/laravel-package-tools": "^1.4.3"
     },
     "require-dev": {
         "nunomaduro/collision": "^5.3",
         "orchestra/testbench": "^6.15",
         "pestphp/pest": "^1.18",
+        "phpunit/phpunit": "^9",
         "pestphp/pest-plugin-laravel": "^1.1",
         "spatie/laravel-ray": "^1.23",
         "vimeo/psalm": "^4.8"
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories"
-        }
+            "Lahiru\\ExchangeRatesLk\\": "src",
+            "Lahiru\\ExchangeRatesLk\\Database\\Factories\\": "database/factories"
+        },
+
+        "files": [
+            "src/Helper.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests"
+            "Lahiru\\ExchangeRatesLk\\Tests\\": "tests",
+            "Tests\\": "tests/"
         }
     },
     "scripts": {
@@ -49,10 +56,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
+                "Lahiru\\ExchangeRatesLk\\ExchangeRatesLkServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "VendorName\\Skeleton\\SkeletonFacade"
+                "ExchangeRatesLk": "Lahiru\\ExchangeRatesLk\\ExchangeRatesLkFacade"
             }
         }
     },
